--- a/repl.html
+++ b/repl.html
@@ -162,5 +162,7 @@ button.addEventListener("click", () => {
 });
 </script>
 </main>
+<script data-goatcounter="https://scrapscript.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
