--- a/repl.html
+++ b/repl.html
@@ -31,18 +31,19 @@ completely stateless. All persistence is in the browser.</p>
 </div>
 <div>
 <!-- TODO(max): Add button to save to/load from disk. -->
-<button id="clear-local-storage">Clear LocalStorage</button>
+<button id="clear-local-storage">Clear</button>
 </div>
 <div id="output" style="height: 400px; overflow: auto;">
 Output:
 </div>
 <div>
-<code>>>> </code><input id="input" type="text" />
+<code><span id="prompt-string">>>></span></code><input id="input" type="text" />
 </div>
 <script type="module">
 "use strict";
 
 function updateHistory(inp, out) {
+    const wrap = document.createElement("div");
     const pre_inp = document.createElement("pre");
     pre_inp.setAttribute("class", "language-text");
     const code_inp = document.createElement("code");
@@ -57,8 +58,9 @@ function updateHistory(inp, out) {
     code_out.append(`${out}`);
     pre_out.append(code_out);
 
-    output.append(pre_inp);
-    output.append(pre_out);
+    wrap.append(pre_inp);
+    wrap.append(pre_out);
+    output.append(wrap);
     output.scrollTop = output.scrollHeight;
 }
 
