--- a/repl.html
+++ b/repl.html
@@ -37,7 +37,7 @@ completely stateless. All persistence is in the browser.</p>
 Output:
 </div>
 <div>
-<input id="input" type="text" /><input id="input-button" type="submit" value="Submit" onclick=submitInput />
+<input id="input" type="text" /><input id="submit-input" type="submit" value="Submit" />
 </div>
 <script type="module">
 "use strict";
@@ -72,7 +72,8 @@ async function sendRequest(env, exp) {
 let input = document.getElementById("input");
 const output = document.getElementById("output");
 const history = [];
-const button = document.getElementById("clear-local-storage");
+const clearButton = document.getElementById("clear-local-storage");
+const submitButton = document.getElementById("submit-input");
 
 function renderHistory() {
     for (const [inp, out] of history) {
@@ -162,9 +163,13 @@ async function inputHandler(e) {
     }
 }
 input.addEventListener("keyup", e => inputHandler(e));
-button.addEventListener("click", () => {
+clearButton.addEventListener("click", () => {
     window.localStorage.clear();
     loadFromLocalStorage();
+    input.focus();
+});
+submitButton.addEventListener("click", () => {
+    submitInput()
     input.focus();
 });
 </script>
