--- a/repl.html
+++ b/repl.html
@@ -32,8 +32,7 @@
       out of date language reference.</p>
       <p>This REPL is run completely in the browser using PyScript/Pyodide.</p>
       </div>
-      <script id="foo" type="py" src="/scrapscript.py" terminal worker></script>
-      <script>document.getElementById("foo").setAttribute("type", "py");</script>
+      <script type="py" src="/scrapscript.py" terminal worker></script>
     </main>
     <script data-goatcounter="https://scrapscript.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
