--- a/repl.html
+++ b/repl.html
@@ -20,10 +20,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
-    <!-- PyScript CSS -->
-    <link rel="stylesheet" href="https://pyscript.net/releases/2024.5.2/core.css">
-    <!-- This script tag bootstraps PyScript -->
-    <script type="module" src="https://pyscript.net/releases/2024.5.2/core.js"></script>
+    <script type="module" src="/pyscript/core.js"></script>
+    <link rel="stylesheet" href="/pyscript/core.css">
   </head>
   <body>
     <main>
