--- a/repl.html
+++ b/repl.html
@@ -20,8 +20,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
-    <script type="module" src="/pyscript/core.js"></script>
-    <link rel="stylesheet" href="/pyscript/core.css">
+    <!-- PyScript CSS -->
+    <link rel="stylesheet" href="https://pyscript.net/releases/2024.5.2/core.css">
+    <!-- This script tag bootstraps PyScript -->
+    <script type="module" src="https://pyscript.net/releases/2024.5.2/core.js"></script>
   </head>
   <body>
     <main>
