Update message on web REPL

--- a/repl.html
+++ b/repl.html
@@ -26,8 +26,9 @@
 <div>
 <p>See <a href="https://scrapscript.org/">scrapscript.org</a> for a slightly
 out of date language reference.</p>
-<p>This REPL sends programs to a server to be evaluated, but the server is
-completely stateless. All persistence is in the browser.</p>
+<p>This REPL is completely client-side and works by running
+<a href="https://github.com/tekknolagi/scrapscript">scrapscript.py</a> in the
+browser using <a href="https://pyodide.org/">Pyodide</a>.</p>
 </div>
 <div>
 <!-- TODO(max): Add button to save to/load from disk. -->
