--- a/repl.html
+++ b/repl.html
@@ -38,7 +38,7 @@ browser using <a href="https://pyodide.org/">Pyodide</a>.</p>
 Output:
 </div>
 <div>
-<input id="input" type="text" /><input id="submit-input" type="submit" value="Submit" />
+<input id="input" type="text" disabled placeholder="Loading pyodide..." /><input id="submit-input" type="submit" value="Submit" />
 </div>
 <script type="module">
 "use strict";
@@ -200,6 +200,9 @@ async function main() {
   const scrapscript = await pyodide.pyimport("scrapscript");
 document.monad = scrapscript.ScrapMonad(scrapscript.boot_env());
 document.scrapscript = scrapscript;
+  input.removeAttribute("disabled");
+  input.setAttribute("placeholder", "Enter Scrapscript code here...");
+  input.focus();
 }
 main();
 </script>
