Add compile --check flag which runs type inference
If it succeeds, the program is littered with correct type annotations,
which means that the compiler can make use of inferred types to avoid
run-time type checks.

--- a/compilerepl.html
+++ b/compilerepl.html
@@ -68,7 +68,9 @@ function updateHistory(inp, out) {
 async function sendRequest(exp) {
     const compiler = document.compiler;
     try {
-      return {result: compiler.compile_to_string(exp, false), ok: true};
+      const tokens = compiler.tokenize(exp);
+      const ast = compiler.parse(tokens);
+      return {result: compiler.compile_to_string(ast, false), ok: true};
     } catch (e) {
       return {text: () => e.toString(), ok: false};
     }
